# BF

./: .gitignore  98_test.pkl  98_train.pkl  README.md  collector.py  data_43_3cls_train.pkl  data_43_4cls.pkl  data_43_4cls_train.pkl  data_43_5cls.pkl  data_43_5cls_train.pkl  data_68_3cls_train.pkl  data_68_cls.pkl  data_98_3cls_test.pkl  data_98_3cls_train.pkl  data_reg_to_cls.py  data_to_duckdb.py  duckdb_check.py  dump.rdb  main.py  pipipickle.py  pyproject.toml  que_push.py  que_push_all.py  que_push_fixed.py  que_push_random.py  que_push_stop.py  rd.py  rd2.py  rd3.py  requirements-3.10.txt  requirements-3.13.txt  requirements.txt  results-20w.duckdb  results.duckdb  results1_(43,4)_3分类.duckdb  train.py  压缩_test-97tz.pkl  压缩_test-98tz.pkl  压缩_train-97tz.pkl  压缩_train-98tz.pkl  (+5 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
