[project]
name = "acln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wolido", email = "270262953@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "pandas>=2.3.0",
    "redis>=6.2.0",
    "scikit-learn>=1.7.0",
]

[project.scripts]
acln = "acln:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
